--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -1,3 +1,18 @@
 $main-padding:15px;
 $main-border:1px solid grey;
 $main-width:1200px;
+
+
+$ma-w--x-small:576px;
+$mi-w--small:577px;
+$ma-w--small:768px;
+$mi-w--medium:769px;
+$ma-w--medium:992px;
+$mi-w--large:993px;
+$ma-w--large:1200px;
+$mi-w--x-large:1201px;
+
+
+$bg-button-menu:rgb(197, 197, 197);
+$color-dark-button-menu:rgb(23, 45, 87);
+$color-light-button-menu:rgb(160, 170, 187);
